--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 </button>
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://drive.google.com/file/d/1GFhFHDP8qaB5D1sD45hBBnMmcpNtoUs6/view?usp=sharing'"
                 >
                   Live Demo
                 </button>
@@ -310,7 +310,7 @@
                 </button>
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://drive.google.com/file/d/1YI-IT371lJqWzzLw1--HWZIDQPw4czFC/view?usp=sharing'"
                 >
                   Live Demo
                 </button>
