--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
       <footer>
         <nav>
           <div class="nav-links-container">
-            <ul class="nav-links">
+            <ul>
               <li><a href="#about">About</a></li>
               <li><a href="#experience">Experience</a></li>
               <li><a href="#projects">Projects</a></li>
@@ -382,7 +382,12 @@
             </ul>
           </div>
         </nav>
-        </footer>
+        <div class="footer-text">
+          <p>© 2025 Ashwin Kumar. All rights reserved.</p>
+        </div>
+      </footer>
+    </body>
+</html>
       <script src="script.js"></script>
   
     </body>
