--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
       <footer>
         <nav>
           <div class="nav-links-container">
-            <ul>
+            <ul class="nav-links">
               <li><a href="#about">About</a></li>
               <li><a href="#experience">Experience</a></li>
               <li><a href="#projects">Projects</a></li>
@@ -383,11 +383,9 @@
           </div>
         </nav>
         <div class="footer-text">
-          <p>© 2025 Ashwin Kumar. All rights reserved.</p>
-        </div>
-      </footer>
-    </body>
-</html>
+            <p>© 2025 Ashwin Kumar. All rights reserved.</p>
+          </div>
+        </footer>
       <script src="script.js"></script>
   
     </body>
